# pvm-eval

./: .gitignore  CLI.md  DESIGN.md  IMPLEMENTATION_TODO.md  README.md  pyproject.toml
.claude/skills/: judge-prompt-generation  prompt-versioning-manager
docs/: CLI.md  CLI_API.md  CLI_KO.md  DESIGN.md  IMPLEMENTATION_TODO.md  PVMProject_API.md  README_KO.md  SERVER_DESIGN.md
examples/: data.csv  template.yaml
pvm/: __init__.py  cli.py  project.py
pvm/config/: check_integrity.py  destroy_project.py  init_project.py  load_config.py  load_template.py  reset_project.py
pvm/core/: __init__.py  errors.py  paths.py  types.py
pvm/eval_pipeline/: judge_composer.py  llm_client.py  pvm_storage.py  show_results.py  step0_generate_config.py  step1_error_analysis.py  step2_generate_judge_prompts.py  step3_run_judge.py
pvm/prompts/: add.py  common.py  delete.py  deploy.py  diff.py  edit_info.py  get.py  get_info.py  list_ids.py  rollback.py  token_count.py
pvm/snapshots/: __init__.py  common.py  create.py  export.py  get.py  list.py  read.py
pvm/storage/: checksum.py  history.py  json_io.py  semver.py  yaml_io.py
server/: config.py  dependencies.py  main.py
server/db/: engine.py  models.py  session.py
server/routers/: pages.py  projects.py  prompts.py  snapshots.py
server/schemas/: projects.py  prompts.py  snapshots.py
server/services/: project_service.py  prompt_service.py  snapshot_service.py
src/pvm/: cli.py  project.py
tests/: test_eval_pipeline_components.py  test_eval_runner.py  test_pvm.py  test_server_main.py  test_token_count.py
ui/: app.py  eval_runner.py
ui/static/: style.css
vscode-extension/: esbuild.js  package-lock.json  package.json  pvm-0.1.0.vsix  tsconfig.json
(+79 files in other folders)
