[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pvm"
version = "0.0.0"
description = "Prompt version management library"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
  "typer>=0.12,<1.0",
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
  "tiktoken>=0.8",
  "pandas>=2.0.0",
  "anthropic>=0.30.0",
  "openai>=1.50.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
server = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
]

[project.scripts]
pvm = "pvm.cli:main"
pvm-server = "server.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pvm*", "server*", "ui*"]

[tool.setuptools.package-data]
"pvm" = [
  "eval_pipeline/prompts/*.md",
  "_skills/judge-prompt-generation/SKILL.md",
  "_skills/prompt-versioning-manager/SKILL.md",
]
ui = [
  "static/**/*",
  "templates/**/*",
]

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
